# GameOfMyLife

./: CMakeLists.txt  Controller.cpp  Controller.h  FileReader.cpp  FileReader.h  Model.cpp  Model.h  README.md  View.cpp  View.h  cell.cpp  cell.h  grid.cpp  grid.h  main.cpp  openfile.cpp  openfile.h  test.txt
